force-app/main/default/objects/custom_create116__c/custom_create116__c.object-meta.xml
<CustomObject>
    <label>Custom created object116</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects116</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>