force-app/main/default/objects/custom_create116__c/fields/custom_create_116field500__c.field-meta.xml
<CustomField>
    <fullName>custom_create_116field500__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 116field500</label>
    <type>Checkbox</type>
</CustomField>